test_suite/ERROR_overriding.out
ERROR_overriding.java: 13:  Semantic Error: overriden(int) in `A` can't override overriden(int) in `B`
  Mismatch in return types `int` and `int[]`
